強制的にHTTPSアクセスに切り替える処理を.htaccessに追加

--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,3 @@
-ErrorDocument 404 /404.php
+RewriteEngine on
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://coderdojo-kashiwa.com/$1 [R=301,L]
